# huge-json-viewer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: i18n.js  index.html  robots.txt  site.js  sitemap.xml
docs/ar/: index.html
docs/de/: index.html
docs/es/: index.html
docs/fr/: index.html
docs/hi/: index.html
docs/i18n/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  pt-BR.json  ru.json  tr.json  zh-CN.json  zh-TW.json
docs/id/: index.html
docs/ja/: index.html
docs/pt-BR/: index.html
docs/ru/: index.html
docs/tr/: index.html
docs/zh-CN/: index.html
docs/zh-TW/: index.html
scripts/: build-site.mjs  gen-screenshots.mjs  gen-test-json.mjs  site-template.html
src/: analytics.ts  i18n.ts  icons.ts  ipc.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: bench.rs
src-tauri/src/: export.rs  index.rs  lib.rs  main.rs  model.rs
