[package]
name = "huge-json-viewer"
version = "0.4.0"
description = "BigJSON — open and search multi-gigabyte JSON files"
authors = ["bandusix"]
edition = "2021"
license = "MIT"
repository = "https://github.com/bandusix/huge-json-viewer"

[lib]
name = "huge_json_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
memchr = "2"
regex = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
